plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.5'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17) // JDK 17 지정
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    // ✅ Validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // ✅ JPA
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // ✅ Database
    runtimeOnly 'com.mysql:mysql-connector-j'
    runtimeOnly 'com.h2database:h2'

    // ✅ Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    // ✅ Swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'

    // ✅ Configuration
    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"

    // ✅ AOP (Aspect-Oriented Programming)
    implementation 'org.springframework.boot:spring-boot-starter-aop'

    // ✅ JWT (JSON Web Token)
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6' // JSON 직렬화용 (jackson 기반)

    // ✅ BCrypt (Ecndoer)
    implementation 'org.mindrot:jbcrypt:0.4'

    // ✅ 테스트
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
    useJUnitPlatform()
}
